working on title tranformation, vertical alignment fixed for now (without bootstrap)

--- a/conradheidebrecht/public/stylesheets/layout.styl
+++ b/conradheidebrecht/public/stylesheets/layout.styl
@@ -126,33 +126,74 @@ ul#nav li.current a
 
 // HOME //
 
-//header:before
-//    content ''
-//    display inline-block
-//    vertical-align middle
-//    height 100%
-//    border 2px solid white
-
 header
+    min-width: 100vw;
+    min-height: 100vh;
+    display flex
+    align-items center
     margin auto
-    width 98vw
-    height 90vw
-    border 2px solid white
 
 header .banner-head
-//display inline-block
-//vertical-align middle
     margin auto
-    width 100%
+    display inline-block
+    align-items center
     padding-bottom 30px
     text-align center
-    border 2px solid white
 
 header .banner-head h1
     font: 80px/1.1em 'Raleway', sans-serif
     color: #fff
     margin auto
-    vertical-align middle
+    height 100%
 
 .title-name
     text-transform: uppercase
+    font-weight 400
+
+// name animations
+.letterDrop
+    position relative
+    top .60em
+    display inline-block
+    letter-spacing .3em
+    opacity .8
+    transform rotateX(-90deg)
+    animation letterDrop 1.2s ease 1 normal forwards
+
+@keyframes letterDrop
+    10%
+        opacity .5
+    20%
+        opacity .8
+        top 3.75em
+        transform rotateX(-360deg)
+    100%
+        opacity 1
+        top 4.50em
+        transform rotateX(360deg)
+
+span:nth-child(2n)
+    color #34495e
+
+span:nth-child(-n+6)
+    color #c0392b
+    font-weight 800
+    letter-spacing .25em
+
+// social media icons
+.social
+    margin 24px 0
+    padding 0
+    font-size 30px
+    text-shadow 0px 1px 2px rgba(0, 0, 0, .8)
+
+.social li
+    display inline-block
+    margin 0 15px
+    padding 0
+
+.social li a
+    color #fff
+
+.social li a:hover
+    color #70e9dB
